systemd System and Service Manager

   systemd (214.9-dev)
~~~~~~~
 * core:
 	- remove dbus CanStart get property;
 	- remove dbus CanStop get property;
 	- remove dbus CanReload get property;
 	- remove dbus CanIsolate get property;
 	- don't generate /{etc,run}/machine-id file;
 	- don't dispatch sd_notify() messages and SIGCHLD multiple times to the same units;
 * rpm:
 	- add user macros;
 * shared:
 	- introduce strv_find_startswith() and make use of it;
 * load full selinux db;
 * remove systemd-machine-id-setup program;
 * code optimization;
 
   systemd (214.8)
~~~~~~~
 * core:
 	- remove systemd.confirm_spawn kernel parameter;
 	- remove confirm-spawn argument option;
 	- remove dump-configuration-items argument option;
 	- remove ConfirmSpawn manager dbus property;
 	- don't confirm when spawning process;
 	- add status_errno field to Service struct;
 	- add StatusErrno service dbus property;
 	- flush status text and errno values each time a service is started;
 	- nicer message when inotify watches are exhausted;
 	- show socket path name when bind error;
 	- show timeouts when watchdog howls;
 	- remove systemd_running_as lookup functions;
 	- change return value of the unit's enumerate() call to void;
 	- return the first error from manager_startup();
 	- add socket_instantiate_service function to socket header file;
 	- remove setup loppback device;
 	- add ProtectSystem and ProtectHome service settings;
 	- fix use duplicating CLD_KILLED value;
 	- print kdbus path when opening fails;
 	- only set the kernel's timezone when the RTC runs in local time;
 	- copy full BindMount struct drop_duplicates function;
 	- report invalid quoted strings;
 	- correct argument sign and split up long lines;
 	- umount the old root correctly in switch-root;
 	- assert on unhandled option in systemd;
 	- define '/org/freedesktop/plymouthd' as PLYMOUTH_SOCKET in def.h;
 	- do not add dependencies to self;
 	- warn when merged units have conflicting dependencies;